# bioIB

./: AD_tau_example_notebook.ipynb  EMT_bioIB_example_notebook.ipynb  README.md  dependencies.txt  pyproject.toml  requirements.txt  setup.py
bioIB_py/: __init__.py  analysis.py  bioIB.py  plotting.py  preprocessing.py  utils.py
bioib/: __init__.py  bioib.py  bioib_sc.py  plotting.py  utils.py
example_notebooks/: AD_tau_example_notebook.ipynb  Developing_macrophages_bioIB_example_notebook.ipynb  Immune_atlas_Y_organ_tutorial.ipynb
