[tool.poetry]
authors = ["Sima Dubnov <serafima.dubnov@mail.huji.ac.il>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Biological Information Bottleneck."
homepage = "https://github.com/nitzanlab/bioib"
license = "BSD-3-Clause"
name = "bioIB"
packages = [
  {include = "bioib"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.15"
scipy = ">=1.5.0"
jax = ">=0.4.23"
pandas = ">=1.3"
anndata = ">=0.8"
scanpy = ">=1.9"
matplotlib = ">=3.3"
# gpu
jax = {version = ">=0.4.23", optional = true}


[tool.poetry.extras]
gpu = ["jax"]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
